FullQa New/src/Distribution Engine/objects/Capping_Pattern__c.object
<CustomObject>
    <fields>
        <fullName>Default_cap__c</fullName>
        <inlineHelpText>Default cap applied to team members if no cap entry is created for their tag, or they do not have a tag from the selected collection.</inlineHelpText>
        <label>Default cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tag_collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Collection of tags to apply team-level caps to.</inlineHelpText>
        <label>Tag collection</label>
        <referenceTo>Tag_Category__c</referenceTo>
        <relationshipLabel>Capping Patterns</relationshipLabel>
        <relationshipName>Capping_Patterns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The method used to control the maximum number of objects that are distributed to members of the team.</inlineHelpText>
        <label>Cap type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Load balanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Capping Pattern</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capping Patterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>